--- a/css/src/style.css
+++ b/css/src/style.css
@@ -122,13 +122,18 @@
 	width: 80%;
 	height: 100%;
 	background: rgb(52,56,66);
-	overflow: scroll;
+	overflow: -moz-scrollbars-none;
+	overflow-y: scroll;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	-ms-overflow-style: none;
 }
 	.download__container > *{
 		flex: none;
+	}
+	.download__container::-webkit-scrollbar {
+		display: none;
 	}
 
 .download__curve--right{
